5/10/2024 - Added CHANGELOG and description in just created company_hierarchy directory.

          - Added files provided by Martin